// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf rata ely ei osoitetta 1`] = `
"ELY/456



Hyvä vastaanottaja
Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (ratalaki 22 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen kirjaamo@ely.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/456.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf rata ely osoitetiedoilla 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIELY/456

















Hyvä vastaanottaja
Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (ratalaki 22 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen kirjaamo@ely.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/456.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf rata vaylavirasto osoitetiedoilla 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123

















Hyvä vastaanottaja
Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (ratalaki 22 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf rata vaylavirasto osoitetiedoilla ruotsi 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123

















Kära mottagare
Projekti 1 på svenska
Bästa fastighetsägare i planeringsområdet,
Trafikledsverket har utarbetat en järnvägsplan enligt banlagen (110/2007): Projekti 1 på svenska.
Hankkeen kuvaus på svenska
Planen hålls offentligt framlagd 1.1.2024 - 8.2.2024 på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo.



Fastighetsägare och andra sakägare samt de vars boende, arbete eller övriga förhållanden påverkas av planen har möjlighet att göra en anmärkning med anledning av planen. (banlagen 22 §). Anmärkningen ska göras före utgången av den tid under vilken planen är framlagd, senast 8.2.2024.
Anmärkningen kan göras på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo eller genom att skicka den till Trafikledsverket registratorskontor på adressen kirjaamo@vayla.fi. Till en anmärkning som skickas till registratorskontoret ska VAYLA/123 fogas.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf rata vaylavirasto osoitetiedoilla vahainen menettely 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123

















Hyvä vastaanottaja
Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut ratalain (110/2007) mukaisen ratasuunnitelman: Projekti 1.
Ratasuunnitelman osalta kyse on ratalain 23 §:n mukaisesta vähäisestä rautatien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (ratalaki 22 § ja 23 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie ely osoitetiedoilla eu 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIELY/456

















Hyvä vastaanottaja
Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen kirjaamo@ely.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/456.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie vaylavirasto ei osoitetta 1`] = `
"VAYLA/123



Hyvä vastaanottaja
Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie vaylavirasto osoitetiedoilla 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123

















Hyvä vastaanottaja
Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie vaylavirasto osoitetiedoilla ruotsi 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123

















Kära mottagare
Projekti 1 på svenska
Bästa fastighetsägare i planeringsområdet,
Trafikledsverket har utarbetat en vägplan enligt lagen om trafiksystem och landsvägar (503/2005): Projekti 1 på svenska.
Hankkeen kuvaus på svenska
Planen hålls offentligt framlagd 1.1.2024 - 8.2.2024 på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo.



Fastighetsägare och andra sakägare samt de vars boende, arbete eller övriga förhållanden påverkas av planen har möjlighet att göra en anmärkning med anledning av planen. (27 § i lagen om trafiksystem och landsvägar). Anmärkningen ska göras före utgången av den tid under vilken planen är framlagd, senast 8.2.2024.
Anmärkningen kan göras på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo eller genom att skicka den till Trafikledsverket registratorskontor på adressen kirjaamo@vayla.fi. Till en anmärkning som skickas till registratorskontoret ska VAYLA/123 fogas.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie vaylavirasto osoitetiedoilla vahainen menettely 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123

















Hyvä vastaanottaja
Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Projekti 1.
Tiesuunnitelman osalta kyse on lain liikennejärjestelmästä ja maanteistä 28 §:n mukaisesta vähäisestä maantien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (LjMTL 27 § ja 28 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf tie vaylavirasto vanha 1`] = `
"VAYLA/123



Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen tiesuunnitelman: Projekti 1.
Tiesuunnitelman osalta kyse on lain liikennejärjestelmästä ja maanteistä 28 §:n mukaisesta vähäisestä maantien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Suunnitelma pidetään yleisesti nähtävillä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (LjMTL 27 § ja 28 §).
Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



Tämä ilmoitus on lähetetty kaikille niille kiinteistön omistajille ja haltijoille (LjMTL 27 § 3 mom):

	- joiden kiinteistöltä suunnitelman mukaan lunastetaan aluetta,
	- joiden kiinteistön alueelle muodostuu suoja- tai näkemäalue,
	- joiden kiinteistön alueeseen perustetaan muu oikeus tai
	- joiden kiinteistö rajoittuu tiealueeseen.
Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä tutustu verkkosivujen tietosuojaosioon, https://www.vayla.fi/tietosuoja.



Lisätietoja antaa 
Testi Teppo (Helsinki), 
puh. 029, test(at)vayla.fi 
"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf yleinen ely osoitetiedoilla 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIELY/456

















Hyvä vastaanottaja
Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Uudenmaan elinkeino-, liikenne- ja ympäristökeskus (ELY-keskus) on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen yleissuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Uudenmaan ELY-keskuksen kirjaamoon osoitteeseen kirjaamo@ely.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus ELY/456.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf yleinen vaylavirasto osoitetiedoilla 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123

















Hyvä vastaanottaja
Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen yleissuunnitelman: Projekti 1.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus. (LjMTL 27§). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf yleinen vaylavirasto osoitetiedoilla ruotsi 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123

















Kära mottagare
Projekti 1 på svenska
Bästa fastighetsägare i planeringsområdet,
Trafikledsverket har utarbetat en utredningsplan enligt lagen om trafiksystem och landsvägar (503/2005): Projekti 1 på svenska.
Hankkeen kuvaus på svenska
Planen hålls offentligt framlagd 1.1.2024 - 8.2.2024 på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo.



Fastighetsägare och andra sakägare samt de vars boende, arbete eller övriga förhållanden påverkas av planen har möjlighet att göra en anmärkning med anledning av planen. (27 § i lagen om trafiksystem och landsvägar). Anmärkningen ska göras före utgången av den tid under vilken planen är framlagd, senast 8.2.2024.
Anmärkningen kan göras på adressen https://localhost:3000/sv/s/lyhytOsoite/nahtavillaolo eller genom att skicka den till Trafikledsverket registratorskontor på adressen kirjaamo@vayla.fi. Till en anmärkning som skickas till registratorskontoret ska VAYLA/123 fogas.



"
`;

exports[`pdfGeneratorHandler generate kiinteiston omistaja pdf yleinen vaylavirasto osoitetiedoilla vahainen menettely 1`] = `
"VäylävirastoPL 3300521 HELSINKITessa TestiläHenrikintie 14 B00370 HELSINKIVAYLA/123

















Hyvä vastaanottaja
Projekti 1
Hyvä suunnittelualueen kiinteistönomistaja,
Väylävirasto on laatinut liikennejärjestelmästä ja maanteistä annetun lain (503/2005) mukaisen yleissuunnitelman: Projekti 1.
Yleissuunnitelman osalta kyse on lain liikennejärjestelmästä ja maanteistä 28 §:n mukaisesta vähäisestä maantien parantamisesta, joka ei muuta paikallisia liikenneolosuhteita ja jonka vaikutukset ovat muutenkin vähäiset.
Hankkeen kuvaus
Suunnitelma pidetään yleisesti nähtävänä 1.1.2024 - 8.2.2024 osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo.



Kiinteistön omistajilla ja muilla asianosaisilla, sekä niillä, joiden asumiseen, työntekoon tai muihin oloihin suunnitelma vaikuttaa on mahdollisuus tehdä suunnitelmasta muistutus (LjMTL 27 § ja 28 §). Muistutus on tehtävä ennen nähtävänäoloajan päättymistä, eli 8.2.2024 mennessä.
Muistutuksen voi tehdä osoitteessa https://localhost:3000/s/lyhytOsoite/nahtavillaolo tai toimittamalla se Väyläviraston kirjaamoon osoitteeseen kirjaamo@vayla.fi. Kirjaamoon lähetettävään muistutukseen tulee liittää asiatunnus VAYLA/123.



"
`;
